// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders Header for route / with expected name Dashboard 1`] = `

<div class="flex h-[65px] w-full items-center rounded-t-lg border-x-[1px] border-t-[1px] px-8 py-3">
  <div class="flex w-full max-w-8xl items-center">
    <h3 class="mt-1 text-lg font-medium">
      Dashboard
    </h3>
  </div>
</div>

`;

exports[`renders Header for route /create-new-project with expected name null 1`] = `


`;

exports[`renders Header for route /error with expected name null 1`] = `


`;

exports[`renders Header for route /explore with expected name Explore 1`] = `

<div class="flex h-[65px] w-full items-center rounded-t-lg border-x-[1px] border-t-[1px] px-8 py-3">
  <div class="flex w-full max-w-8xl items-center">
    <h3 class="mt-1 text-lg font-medium">
      Explore
    </h3>
  </div>
</div>

`;

exports[`renders Header for route /labels with expected name Labels 1`] = `

<div class="flex h-[65px] w-full items-center rounded-t-lg border-x-[1px] border-t-[1px] px-8 py-3">
  <div class="flex w-full max-w-8xl items-center">
    <h3 class="mt-1 text-lg font-medium">
      Labels
    </h3>
  </div>
</div>

`;

exports[`renders Header for route /queries with expected name Queries 1`] = `

<div class="flex h-[65px] w-full items-center rounded-t-lg border-x-[1px] border-t-[1px] px-8 py-3">
  <div class="flex w-full max-w-8xl items-center">
    <h3 class="mt-1 text-lg font-medium">
      Queries
    </h3>
  </div>
</div>

`;
